# rug-rag_1.0

./: README.md  empty_list.docx  empty_list_filled.docx  test.py  test_file.docx  tool_using.py
.cursor/rules/: ui-design-guidelines.mdc
backend/: .env.example  .gitignore  convert.py  embedding_server.py  main.py  pyproject.toml  run.py
backend/wenshu/: __init__.py  config.py  document_schemas.py  main.py
backend/wenshu/agents/: __init__.py  callbacks.py  researcher.py  tools.py
backend/wenshu/api/: __init__.py  autofill.py  chat.py  documents.py
backend/wenshu/llms/: gpt_llm.py
backend/wenshu/models/: __init__.py  document_schemas.py
backend/wenshu/processors/: __init__.py  document_processor.py  form_filler.py
backend/wenshu/services/: agent_service.py  session_service.py
backend/wenshu/utils/: __init__.py  llm_from_filler.py  streaming.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/chat/: AutofillControlMessage.vue  AutofillPreviewMessage.vue  ChatInput.vue  ChatMessage.vue  ChatSidebar.vue  FileMessageRenderer.vue
frontend/src/components/common/: DesignSystemDemo.vue  DocumentMetadataEditor.vue  FileUploadArea.vue  Icon.vue  IconExample.vue  MetadataEditorModal.vue  README.md  types.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: autofill.ts  chat.ts
frontend/src/utils/: fileUtils.ts
frontend/src/views/: ChatDemo.vue  HomeView.vue
