[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.36.1",
    "llama-index>=0.12.38",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-embeddings-openai-like>=0.1.1",
    "llama-index-llms-huggingface-api>=0.5.0",
    "llama-index-llms-vllm>=0.5.1",
    "llama-index-node-parser-docling>=0.3.2",
    "llama-index-readers-docling>=0.3.3",
    "llama-index-readers-file>=0.4.8",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "vllm>=0.9.0.1",
    "xlrd>=2.0.1",
]
